--- a/AspMVCDatatableServerSidePaging/Web.config
+++ b/AspMVCDatatableServerSidePaging/Web.config
@@ -9,7 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AspMVCDatatableServerSidePaging-20220311065243.mdf;Initial Catalog=aspnet-AspMVCDatatableServerSidePaging-20220311065243;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!-- <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AspMVCDatatableServerSidePaging-20220311065243.mdf;Initial Catalog=aspnet-AspMVCDatatableServerSidePaging-20220311065243;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+
+
+  <add name="DefaultConnection" connectionString="Data Source=sql.bsite.net\MSSQL2016;Initial Catalog=cyruslucio_;User ID=cyruslucio_;Password=admin$1st!;Persist Security Info=True;" providerName="System.Data.SqlClient" />
+
+  
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -26,7 +31,12 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
-  </system.webServer>
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
