change connection string to point to local sql server database

--- a/AspMVCDatatableServerSidePaging/Web.config
+++ b/AspMVCDatatableServerSidePaging/Web.config
@@ -9,10 +9,18 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+
+    <!-- Connection String For Attach Database (.MDF) Files  -->
     <!-- <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AspMVCDatatableServerSidePaging-20220311065243.mdf;Initial Catalog=aspnet-AspMVCDatatableServerSidePaging-20220311065243;Integrated Security=True" providerName="System.Data.SqlClient" />-->
 
+    <!-- Connection String For Local SQL Server Database with SQL Server Authentication Mode  -->
+   
+    <add name="DefaultConnection" 
+         connectionString="Server=DESKTOP-MM2T8VN\SQLEXPRESS;Database=aspnet-AspMVCDatatableServerSidePaging-20220311065243;User Id=sa;Password=root" 
+         providerName="System.Data.SqlClient" />
 
-  <add name="DefaultConnection" connectionString="Data Source=sql.bsite.net\MSSQL2016;Initial Catalog=cyruslucio_;User ID=cyruslucio_;Password=admin$1st!;Persist Security Info=True;" providerName="System.Data.SqlClient" />
+    <!-- Connection String For Web Hosting SQL Server Database -->
+    <!--<add name="DefaultConnection" connectionString="Data Source=sql.bsite.net\MSSQL2016;Initial Catalog=cyruslucio_;User ID=cyruslucio_;Password=admin$1st!;Persist Security Info=True;" providerName="System.Data.SqlClient" />-->
 
   
   </connectionStrings>
